--- a/modules/quickstart/pages/container-deployment/uyuni/quickstart-deploy-uyuni-server.adoc
+++ b/modules/quickstart/pages/container-deployment/uyuni/quickstart-deploy-uyuni-server.adoc
@@ -45,7 +45,7 @@ For instance:
 For additional details, refer to the section on network requirements in the Installation and Upgrade Guide, available at xref:installation-and-upgrade:network-requirements.adoc[].
 ====
 
-== Aquire the {leapmicro} {microversion} Image
+== Acquire the {leapmicro} {microversion} Image
 
 . Proceed to: link:https://get.opensuse.org/leapmicro/5.5/#download[Download {leapmicro} {microversion}]
 . Select and download the **Offline Image**.
@@ -100,7 +100,7 @@ transactional-update shell
 
 [source, shell]
 ----
-zypper ar https://download.opensuse.org/repositories/systemsmanagement:/Uyuni:/Stable:/ContainerUtils/openSUSE_Leap_Micro_5.5/systemsmanagement:Uyuni:Stable:ContainerUtils.repo
+zypper ar https://download.opensuse.org/repositories/systemsmanagement:/Uyuni:/Stable/images/repo/Uyuni-Server-POOL-x86_64-Media1/
 ----
 
 . Refresh the repository list and accept the key:
