cont. with periphals and proper xrefs

--- a/modules/specialized-guides/nav-specialized-guides-guide.adoc
+++ b/modules/specialized-guides/nav-specialized-guides-guide.adoc
@@ -88,7 +88,7 @@ endif::[]
 **** xref:large-deployments/operation-reqs.adoc[Operation Requirements]
 *** xref:large-deployments/hub-multi-server.adoc[Multiple Servers with Hub]
 **** xref:large-deployments/hub-reqs.adoc[Hub Operation Requirements]
-**** xref:large-deployments/hub-install.adoc[Hub XMLRPC API Deployment]
+**** xref:large-deployments/hub-install.adoc[Hub Deployment with Peripheral Servers]
 **** xref:large-deployments/hub-api.adoc[Hub XMLRPC API Usage]
 **** xref:large-deployments/hub-namespaces.adoc[Hub Namespaces]
 **** xref:large-deployments/hub-auth.adoc[Hub Authentication]
