--- a/modules/specialized-guides/pages/large-deployments/hub-install.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-install.adoc
@@ -1,10 +1,18 @@
-// FIXME
-// 2024-10-15, ke: Do we still need this or parts of it?
 [[lsd-hub-install]]
-= Hub XMLRPC API Deployment
+= Hub Deployment with Peripheral Servers
 
-Before you begin, you must deploy {productname} using the parameter [option]``--hubxmlrpc-replicas 1`` and prepare SSL certificates for the peripheral servers as outlined in xref:specialized-guides:large-deployments/hub-reqs.adoc#lsd-hub-reqs-server[].
+For a hub environment, first deploy {productname}.
+Add [option]``--hubxmlrpc-replicas 1`` to the [command]``mgradm install`` command line.
+For example:
 
+----
+mgradm install podman suma.example.com --hubxmlrpc-replicas 1
+----
+
+For more information about deploying with [command]``mgradm``, see tion-and-upgrade:container-deployment/suma/server-deployment-suma.adoc[].
+
+Then prepare SSL certificates for the peripheral servers.
+For more information about SSL certificates, see xref:specialized-guides:large-deployments/hub-reqs.adoc#lsd-hub-reqs-certs[].
 
 
 .Procedure: Using Third Party Certificates
@@ -31,7 +39,7 @@ mgrctl term
 ----
 
 
-. Run ``rhn-ssl-tool`` for every pheripheral server
+. Run [command]``rhn-ssl-tool`` for every pheripheral server:
 +
 
 ----
@@ -40,39 +48,20 @@ rhn-ssl-tool --gen-server --dir="/root/ssl-build" --set-country="COUNTRY" \
   --set-org-unit="ORGANIZATION UNIT" --set-email="name@example.com" \
   --set-hostname=<hostname> --set-cname="example.com"
 
-. On every peripheral server
-4.1. Copy ``/root/ssl-build/RHN-ORG-TRUSTED-SSL-CERT`` and  ``/root/ssl-build/<hostname>/server.crt`` and ``/root/ssl-build/<hostname>/server.key`` to peripheral server host
-4.2. On every peripheral server, copy ``RHN-ORG-TRUSTED-SSL-CERT`` to ``/etc/pki/trust/anchors/`` and run ``update-ca-certificates``
-4.3. Install SUSE Manager with  ``mgradm install podman --ssl-ca-root RHN-ORG-TRUSTED-SSL-CERT --ssl-server-cert server.crt --ssl-server-key server.key``
-4.4. Register the peripheral server to the hub server
-``mgradm hub register --api-password <hub password> --api-server <hub fqdn> --api-user <hub admin>``
-. Preliminary Requirement: A certificate for every peripheral server (for example, [literal]``server.crt``) and a key (for example, [literal]``server.key``).
-. Preliminary Requirement: CA Certificate.
-.Procedure: Installing and Configuring the Hub XMLRPC API
-. On the Hub Server, or on a host that has access to all peripheral servers' XMLRPC APIs, install the ``hub-xmlrpc-api`` package.
-    The package is available in the {productname} {productnumber} repositories.
-. OPTIONAL: Set the Hub XMLRPC API service to start automatically at boot time, and start it immediately:
+. On every peripheral server:
+* Copy [path]``/root/ssl-build/RHN-ORG-TRUSTED-SSL-CERT`` and  [path]``/root/ssl-build/<hostname>/server.crt`` and [path]``/root/ssl-build/<hostname>/server.key`` to the peripheral server host.
+* On every peripheral server, copy [path]``RHN-ORG-TRUSTED-SSL-CERT`` to [path]``/etc/pki/trust/anchors/``, and run [command]``update-ca-certificates``.
+* Install {productname} with:
 +
+
 ----
-sudo systemctl enable hub-xmlrpc-api.service
-sudo systemctl start hub-xmlrpc-api.service
+mgradm install podman --ssl-ca-root RHN-ORG-TRUSTED-SSL-CERT --ssl-server-cert server.crt --ssl-server-key server.key
 ----
 
-. OPTIONAL: Check that these parameters in the [path]``/etc/hub/hub.conf`` configuration file are correct:
-*  ``HUB_API_URL``: URL to the Hub Server XMLRPC API endpoint.
-    Use the default value if you are installing `hub-xmlrpc-api` on the Hub Server.
-* ``HUB_CONNECT_TIMEOUT``: the maximum number of seconds to wait for a response when connecting to a Server.
-    Use the default value in most cases.
-* ``HUB_REQUEST_TIMEOUT``: the maximum number of seconds to wait for a response when calling a Server method.
-    Use the default value in most cases.
-* ``HUB_CONNECT_USING_SSL``: use HTTPS instead of HTTP for communicating with peripheral Servers.
-    Recommended for a secure environment.
+* Register the peripheral server to the hub server
++
 
-. Restart services to pick up configuration changes.
+----
+mgradm hub register --api-password <hub password> --api-server <hub fqdn> --api-user <hub admin>
+----
 
-
-[NOTE]
-====
-To use HTTPS to connect to peripheral Servers, you must set the ``HUB_CONNECT_USING_SSL`` parameter to ``true``, and ensure that the SSL certificates for all the peripheral Servers are installed on the machine where the ``hub-xmlrpc-api`` service runs.
-Do this by copying the ``RHN-ORG-TRUSTED-SSL-CERT`` certificate file from each peripheral Server's [path]``http://<server-url>/pub/`` directory to [path]``/etc/pki/trust/anchors/``, and run [command]``update-ca-certificates``.
-====
