--- a/modules/specialized-guides/pages/large-deployments/hub-reqs.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reqs.adoc
@@ -22,7 +22,8 @@ For example:
 mgradm install podman suma.example.com --hubxmlrpc-replicas 1
 ----
 
-For more information about deploying with [command]``mgradm``, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc[].
+For more information about hub server deployment, see xref:specialized-guides:large-deployments/lsd-hub-install.adoc[].
+
 
 [NOTE]
 ====
@@ -40,7 +41,7 @@ There are two ways to fulfill this requirement:
 
 * Use third party certificates.
 * Deploy the Hub Server first and use it to generate the certificates for the Peripheral Servers.
-  For more information, see xref:specialized-guides:large-deployments/hub-reqs.adoc#lsd-hub-reqs-gencerts[] .
+  For more information, see xref:specialized-guides:large-deployments/hub-reqs.adoc#lsd-hub-reqs-gencerts[].
 
 
 
@@ -60,7 +61,7 @@ If you will use third party provided Certificates, you can skip this procedure.
 . From the container host, enter the shell in the Hub Server container with:
 +
 ----
-mgrctl exec -ti /bin/sh
+mgrctl term
 ----
 
 . On the command line, run [command]``rhn-ssl-tool`` for each Peripheral Server (replace placeholders such as [literal]``COUNTRY``, [literal]``STATE``, [literal]``example.com``, etc. with values from your environment):
