--- a/modules/specialized-guides/pages/large-deployments/hub-install.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-install.adoc
@@ -1,5 +1,5 @@
 [[lsd-hub-install]]
-= Hub Deployment with Peripheral Servers
+= Hub Deployment with XMLRPC
 
 For a hub environment, first deploy {productname}.
 Add [option]``--hubxmlrpc-replicas 1`` to the [command]``mgradm install`` command line.
