--- a/modules/specialized-guides/pages/large-deployments/hub-api.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-api.adoc
@@ -1,16 +1,7 @@
 [[lsd-hub-api]]
 = Using the Hub XMLRPC API
 
-
-Make sure the ``hub-xmlrpc-api`` service is started:
-
-// CHECKIT!
-----
-mgrctl exec -ti -- systemctl start hub-xmlrpc-api
-----
-
-When it is running, connect to the service at port 2830 using any XMLRPC-compliant client libraries.
-
+When XMLRPC API is running, connect to the service at port 2830 using any XMLRPC-compliant client libraries.
 For examples, see xref:specialized-guides:large-deployments/hub-auth.adoc[].
 
 Logs are saved in ``/var/log/hub/hub-xmlrpc-api.log``.
