Added info about running mgrctl term before all other commands.

--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -70,6 +70,13 @@ Certificates signed with different CAs do not match.
 
 == Replace Certificates
 
+
+[IMPORTANT]
+====
+The following procedure needs to run inside of the container. 
+Use [literal]``mgrctl term`` to open a terminal in the container before you execute it.
+====
+
 You can replace active certificates on your {productname} installation with a new certificate.
 To replace the certificates, you can replace the installed CA certificate with the new CA, and then update the database.
 
@@ -87,6 +94,7 @@ Intermediate CAs can either be available in the file which is specified with `--
 The `--intermediate-ca-file` option can be specified multiple times.
 This command performs a number of tests on the provided files to test if they are valid and can be used for the requested use case.
 
+.Procedure
 . Restart services to pick up the changes:
 +
 ----
