add background info

--- a/modules/specialized-guides/pages/large-deployments/hub-install.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-install.adoc
@@ -9,7 +9,7 @@ For example:
 mgradm install podman suma.example.com --hubxmlrpc-replicas 1
 ----
 
-For more information about deploying with [command]``mgradm``, see tion-and-upgrade:container-deployment/suma/server-deployment-suma.adoc[].
+For more information about deploying with [command]``mgradm``, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc[].
 
 Then prepare SSL certificates for the peripheral servers.
 For more information about SSL certificates, see xref:specialized-guides:large-deployments/hub-reqs.adoc#lsd-hub-reqs-certs[].
@@ -28,7 +28,7 @@ mgradm install podman --ssl-ca-root CA-Certificate.crt --ssl-server-cert server.
 ----
 
 
-.Procedure: Using generate the certificates with rhn-ssl-tool:
+.Procedure: Using Certificates Self-Generated with [command]``rhn-ssl-tool``
 . Preliminary Requirement: Hub server installation
 
 . On the hub server, enter the hub container with:
@@ -58,10 +58,17 @@ rhn-ssl-tool --gen-server --dir="/root/ssl-build" --set-country="COUNTRY" \
 mgradm install podman --ssl-ca-root RHN-ORG-TRUSTED-SSL-CERT --ssl-server-cert server.crt --ssl-server-key server.key
 ----
 
-* Register the peripheral server to the hub server
+* Register the peripheral server to the hub server:
 +
 
 ----
 mgradm hub register --api-password <hub password> --api-server <hub fqdn> --api-user <hub admin>
 ----
 
+
+
+== Background Information
+
+The variables for /etc/hub/hub.conf can be customized with [literal]``Environment=`` settings in the [systemitem]``systemd`` file [path]``/etc/systemd/system/uyuni-hub-xmlrpc.service.d/local.conf`` (it is the same for all containers).
+[literal]``HUB_API_URL`` is set automatically in the systemd unit file during the installation.
+[literal]``HUB_CONNECT_USING_SSL`` is always enabled.
