add link for gb info

--- a/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-reporting.adoc
@@ -26,6 +26,8 @@ The reporting database is a separate database accessible via the network.
 ====
 As a requirement we expect all server certificates are signed by the same Root Certificate Authority (CA).
 The whole {productname} Hub environment should be using only one Root CA.
+
+For more information about certificates, see xref:specialized-guides:large-deployments/hub-reqs.adoc#lsd-hub-reqs-certs[].
 ====
 
 
