--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-migration-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-migration-uyuni.adoc
@@ -11,12 +11,10 @@ This section will help you migrate from the legacy [systemitem]``systemd`` proxy
 
 [IMPORTANT]
 ====
-An in-place migration from previous releases of {productname}  to {productnumber} will remain unsupported due to the HostOS change from {sles} 15 SP4 to {leapmicro} {microversion}
+An in-place migration from previous releases of {productname}  to {productnumber} will remain unsupported due to the HostOS change from {leap} to {leapmicro}.
 
 The traditional contact protocol is no longer supported in {productname} {productnumber} and later.
 Before migrating from previous {productname} releases to {productnumber}, any existing traditional clients including the traditional proxies must be migrated to {salt}.
-
-For more information about migrating traditional {productname} 2024.04 clients to {salt} clients, see https://documentation.suse.com/suma/4.3/en/suse-manager/client-configuration/contact-methods-migrate-traditional.html
 ====
 
 
