--- a/modules/administration/pages/ssl-certs-imported.adoc
+++ b/modules/administration/pages/ssl-certs-imported.adoc
@@ -92,6 +92,7 @@ Intermediate CAs can either be available in the file which is specified with `--
 The `--intermediate-ca-file` option can be specified multiple times.
 This command performs a number of tests on the provided files to test if they are valid and can be used for the requested use case.
 
+.Procedure
 . Restart services to pick up the changes:
 +
 ----
@@ -103,7 +104,7 @@ mgrctl exec -- spacewalk-service start
 
 If you are using a proxy, you need to generate a server certificate RPM for each proxy, using their host names and cnames.
 You should use [command]``mgr-ssl-cert-setup`` also on a {productname} Proxy to replace the certificates.
-Because the {productname} Proxy does not have a postgreSQL database, only [command]``spacewalk-service restart`` is sufficient.
+Because the {productname} Proxy does not have a {postgresql} database, only [command]``spacewalk-service restart`` is sufficient.
 
 If the Root CA was changed, it needs to get deployed to all the clients connected to {productname}.
 
