--- a/modules/installation-and-upgrade/pages/container-management/updating-proxy-containers.adoc
+++ b/modules/installation-and-upgrade/pages/container-management/updating-proxy-containers.adoc
@@ -16,17 +16,17 @@ transactional-update
 ----
 mgrpxy upgrade podman
 ----
-
-Those running on a Kubernetes cluster can update using:
-
++
+. Or, those running on a Kubernetes cluster can update using:
++
 ----
 mgrpxy upgrade kubernetes
 ----
 
-.Upgrading to specific version
 [NOTE]
 ====
-If you do not specify the tag parameter, it will default to upgrading to the most recent version. To upgrade to a specific version, provide the tag parameter with the desired image tag.
+If you do not specify the tag parameter when upgrading to specific version, it will default to upgrading to the most recent version.
+To upgrade to a specific version, provide the tag parameter with the desired image tag.
 ====
 
 [IMPORTANT]
