--- a/modules/installation-and-upgrade/pages/container-management/updating-proxy-containers.adoc
+++ b/modules/installation-and-upgrade/pages/container-management/updating-proxy-containers.adoc
@@ -2,6 +2,7 @@
 
 Before running the upgrade command, it is recommended to upgrade the [literal]``mgrpxy`` tool first.
 
+.Procedure
 . One can do so by running the following command:
 +
 ----
