--- a/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-migration-uyuni.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/uyuni/proxy-migration-uyuni.adoc
@@ -90,11 +90,11 @@ proxy-ssh
 
 
 
-== Migrate {productname} 2024.04 Proxy to {productname} {productnumber} Containerized Proxy
+== Migrate {productname} Proxy to {productname} {productnumber} Containerized Proxy
 
 
 
-.Task: Migrate {productname} 2024.04 Containerized Proxy to {productname} {productnumber} New Containerized Proxy
+.Task: Migrate {productname} Containerized Proxy to {productname} {productnumber} New Containerized Proxy
 . Boot your new machine and begin installation of {leapmicro} {microversion}.
 . Complete the installation.
 . Update the system:
