Extended the list of required URLs.

--- a/modules/installation-and-upgrade/pages/network-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/network-requirements.adoc
@@ -178,6 +178,7 @@ In most cases, allowing access to these URLs is sufficient:
 
 * scc.suse.com
 * updates.suse.com
+* installer-updates.suse.com
 
 If you are using non-{suse} clients you might also need to allow access to other servers that provide specific packages for those operating systems.
 For example, if you have {ubuntu} clients, you will need to be able to access the {ubuntu} server.
