--- a/modules/installation-and-upgrade/pages/container-management/updating-proxy-containers.adoc
+++ b/modules/installation-and-upgrade/pages/container-management/updating-proxy-containers.adoc
@@ -36,4 +36,4 @@ While there is an option to upgrade a specific container using its specific tag,
 We highly recommend using the same tag for all proxy containers to ensure consistency under normal circumstances.
 ====
 
-For air-gapped installations, first upgrade the container RPM packages, then run the [literal]``mgrpxy upgrade podman`` command.
+For air-gapped installations, first upgrade the container RPM packages, then run the [command]``mgrpxy upgrade podman`` command.
