--- a/modules/installation-and-upgrade/pages/container-management/updating-proxy-containers.adoc
+++ b/modules/installation-and-upgrade/pages/container-management/updating-proxy-containers.adoc
@@ -2,7 +2,8 @@
 
 Before running the upgrade command, it is recommended to upgrade the [literal]``mgrpxy`` tool first.
 
-. One can do so by running the following command:
+.Procedure
+. Run the command:
 +
 ----
 transactional-update
@@ -16,17 +17,17 @@ transactional-update
 ----
 mgrpxy upgrade podman
 ----
-
-Those running on a Kubernetes cluster can update using:
-
++
+. Or, those running on a Kubernetes cluster can update using:
++
 ----
 mgrpxy upgrade kubernetes
 ----
 
-.Upgrading to specific version
 [NOTE]
 ====
-If you do not specify the tag parameter, it will default to upgrading to the most recent version. To upgrade to a specific version, provide the tag parameter with the desired image tag.
+If you do not specify the tag parameter when upgrading to specific version, it will default to upgrading to the most recent version.
+To upgrade to a specific version, provide the tag parameter with the desired image tag.
 ====
 
 [IMPORTANT]
@@ -35,4 +36,4 @@ While there is an option to upgrade a specific container using its specific tag,
 We highly recommend using the same tag for all proxy containers to ensure consistency under normal circumstances.
 ====
 
-For air-gapped installations, first upgrade the container RPM packages, then run the [literal]``mgradm`` command.
+For air-gapped installations, first upgrade the container RPM packages, then run the [command]``mgrpxy upgrade podman`` command.
