clarify inside/outside container per feedback

--- a/modules/client-configuration/pages/contact-methods-saltssh-tunnel.adoc
+++ b/modules/client-configuration/pages/contact-methods-saltssh-tunnel.adoc
@@ -33,8 +33,8 @@ Use [literal]``mgrctl term`` before running steps inside the server container.
 ====
 
 For tunneling connections via SSH, a port number is required for tunneling via HTTPS.
-The port number used by default is `1233`.
-To overwrite it, you can add a custom port numbers greater than 1024 to [path]``/etc/rhn/rhn.conf``:
+The port number used by default is [literal]``1233``.
+To overwrite it, inside the container, you can add a custom port numbers greater than 1024 to [path]``/etc/rhn/rhn.conf``:
 
 ----
 ssh_push_port_https = high_port
@@ -42,18 +42,20 @@ ssh_push_port_https = high_port
 
 After changing this configuration parameter you must restart services such as [systemitem]``salt-secrets-config.service``, [systemitem]``tomcat.service``, and
 [systemitem]``taskomatic.service``.
-To cover all needed services, it is the best to restart the {productname} Server as root:
+To cover all needed services, it is the best to restart the {productname} Server as root.
+Outside of the container, from the container host, enter:
 
 ----
 mgradm restart
 ----
 
 
-
+////
 [IMPORTANT]
 ====
 Use [literal]``mgrctl term`` before running steps inside the server container.
 ====
+////
 
 For security reasons, you might want to use sudo with SSH, to access the system as an unprivileged user instead of as root.
 
@@ -79,7 +81,7 @@ When the client is successfully installed it runs with root privileges, so the a
 We recommend that you remove the line from the [path]``sudoers`` file after the client has been successfully installed.
 ====
 
-. On the {productname} Server, in the [path]``/etc/rhn/rhn.conf`` configuration file, add or amend this line to include the unprivileged username:
+. Inside the {productname} Server container, edit the [path]``/etc/rhn/rhn.conf`` configuration file, and add or amend this line to include the unprivileged username:
 +
 ----
 ssh_push_sudo_user = <user>
@@ -88,7 +90,9 @@ ssh_push_sudo_user = <user>
 
 After changing this configuration parameter you must restart services such as [systemitem]``salt-secrets-config.service``, [systemitem]``tomcat.service``, and
 [systemitem]``taskomatic.service``.
-To cover all needed services, it is the best to restart the {productname} Server as root:
+To cover all needed services, it is the best to restart the {productname} Server as root.
+Outside of the container, from the container host, enter:
+
 
 ----
 mgradm restart
