re-add lost hub settings
per feedback

--- a/modules/specialized-guides/pages/large-deployments/hub-install.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-install.adoc
@@ -66,6 +66,16 @@ mgradm install podman --ssl-ca-root RHN-ORG-TRUSTED-SSL-CERT --ssl-server-cert s
 mgradm hub register --api-password <hub password> --api-server <hub fqdn> --api-user <hub admin>
 ----
 
+. OPTIONAL: Inside the container, check that these parameters in the [path]``/etc/hub/hub.conf`` configuration file are correct:
+*  ``HUB_API_URL``: URL to the Hub Server XMLRPC API endpoint.
+    Use the default value if you are installing `hub-xmlrpc-api` on the Hub Server.
+* ``HUB_CONNECT_TIMEOUT``: the maximum number of seconds to wait for a response when connecting to a Server.
+    Use the default value in most cases.
+* ``HUB_REQUEST_TIMEOUT``: the maximum number of seconds to wait for a response when calling a Server method.
+    Use the default value in most cases.
+* ``HUB_CONNECT_USING_SSL``: use HTTPS instead of HTTP for communicating with peripheral Servers.
+    Recommended for a secure environment.
+
 
 
 == Background Information
