Added missing architecture to hardware requirements in Installation and Upgrade Guide.

--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -2,7 +2,7 @@
 = Hardware Requirements
 
 ifeval::[{suma-content} == true]
-This table outlines hardware and software requirements for the {productname} Server and Proxy, on {x86_64}, {arm} and {s390x} architecture.
+This table outlines hardware and software requirements for the {productname} Server and Proxy, on {x86_64}, {arm}, {ppc64le} and {s390x} architecture.
 endif::[]
 
 ifeval::[{uyuni-content} == true]
