--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -40,7 +40,7 @@ For more information about filesystem and partitioning details, see xref:install
 | Recommendation
 
 | CPU
-| {x86_64}, {arm}, or {s390x}
+| {x86_64}, {arm}, {ppc64le} or {s390x}
 | Minimum 4 dedicated 64-bit CPU cores
 
 | RAM
