Added missing architecture to hardware requirements in Installation and Upgrade Guide.

--- a/modules/installation-and-upgrade/pages/hardware-requirements.adoc
+++ b/modules/installation-and-upgrade/pages/hardware-requirements.adoc
@@ -2,7 +2,7 @@
 = Hardware Requirements
 
 ifeval::[{suma-content} == true]
-This table outlines hardware and software requirements for the {productname} Server and Proxy, on {x86_64}, {arm} and {s390x} architecture.
+This table outlines hardware and software requirements for the {productname} Server and Proxy, on {x86_64}, {arm}, {ppc64le} and {s390x} architecture.
 endif::[]
 
 ifeval::[{uyuni-content} == true]
@@ -40,7 +40,7 @@ For more information about filesystem and partitioning details, see xref:install
 | Recommendation
 
 | CPU
-| {x86_64}, {arm}, or {s390x}
+| {x86_64}, {arm}, {ppc64le}, or {s390x}
 | Minimum 4 dedicated 64-bit CPU cores
 
 | RAM
