--- a/modules/specialized-guides/pages/large-deployments/hub-install.adoc
+++ b/modules/specialized-guides/pages/large-deployments/hub-install.adoc
@@ -1,6 +1,15 @@
 [[lsd-hub-install]]
 = Hub Deployment with XMLRPC
 
+to prepare 3rd party certificates for both Hub and Peripheral servers first and then deploy them, to ensure that the hub is using the same CA.
+
+Hub:
+mgradm install podman --ssl-ca-root CA-Certificate.crt --ssl-server-cert hub.crt --ssl-server-key hub.key --hubxmlrpc-replicas 1
+
+Peripheral servers:
+mgradm install podman --ssl-ca-root CA-Certificate.crt --ssl-server-cert server.crt --ssl-server-key server.key
+
+
 For a hub environment, first deploy {productname}.
 Add [option]``--hubxmlrpc-replicas 1`` to the [command]``mgradm install`` command line.
 For example:
@@ -26,6 +35,23 @@ For more information about SSL certificates, see xref:specialized-guides:large-d
 ----
 mgradm install podman --ssl-ca-root CA-Certificate.crt --ssl-server-cert server.crt --ssl-server-key server.key
 ----
+
+
+
+// ========================================================================
+
+For a hub environment, first deploy {productname}.
+Add [option]``--hubxmlrpc-replicas 1`` to the [command]``mgradm install`` command line.
+For example:
+
+----
+mgradm install podman suma.example.com --hubxmlrpc-replicas 1
+----
+
+For more information about deploying with [command]``mgradm``, see xref:installation-and-upgrade:container-deployment/suma/server-deployment-suma.adoc[].
+
+Then prepare SSL certificates for the peripheral servers.
+For more information about SSL certificates, see xref:specialized-guides:large-deployments/hub-reqs.adoc#lsd-hub-reqs-certs[].
 
 
 .Procedure: Using Certificates Self-Generated with [command]``rhn-ssl-tool``
