--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
@@ -1,5 +1,5 @@
 [[proxy-install-vm]]
-= Deploy {productname} {productnumber} Proxy as a Virtual Machine
+= Deploy {productname} {productnumber} Proxy as a Virtual Machine - KVM
 ifeval::[{uyuni-content} == true]
 :noindex:
 endif::[]
@@ -7,15 +7,33 @@ endif::[]
 This chapter provides the Virtual Machine settings for deployment of {productname} {productnumber} as an image.
 KVM will be combined with Virtual Machine Manager (_virt-manager_) as a sandbox for this installation.
 
+
+
+// FIXME: make this section a snippet or move it to a general intro for both,
+//        KVM and VMware
+== Available Images
+
 [IMPORTANT]
 ====
-The preferred method for deploying {productname} {productnumber} Proxy is to use one of the following available images. All tools are included in these images greatly simplifying deployment.
+The preferred method for deploying {productname} {productnumber} Proxy is to use one of the following available images.
+All tools are included in these images greatly simplifying deployment.
 ====
-
-== Available Images
 
 Images for {productname} {productnumber} are available at link:https://www.suse.com/download/suse-manager/[{productname} {productnumber} VM images].
 
+[NOTE]
+====
+For more information on preparing raw images, see:
+
+* link:https://documentation.suse.com/en-us/sle-micro/5.5/single-html/SLE-Micro-deployment/#sec-raw-preparation[]
+* link:https://documentation.suse.com/en-us/sle-micro/5.5/single-html/SLE-Micro-deployment/#cha-images-procedure[]
+
+For additional information on the self install images, see:
+
+* link:https://documentation.suse.com/en-us/sle-micro/5.5/single-html/SLE-Micro-deployment/#cha-selfinstal-procedure[]
+====
+
+// FIXME more archs supported?
 
 .Available Proxy Images
 [cols="3, 3", options="header"]
@@ -28,17 +46,6 @@ Images for {productname} {productnumber} are available at link:https://www.suse.
 
 |===
 
-[NOTE]
-====
-For more information on preparing raw images see:
-
-* link:https://documentation.suse.com/en-us/sle-micro/5.5/single-html/SLE-Micro-deployment/#sec-raw-preparation[]
-* link:https://documentation.suse.com/en-us/sle-micro/5.5/single-html/SLE-Micro-deployment/#cha-images-procedure[]
-
-For additional information on the self install images see:
-
-* link:https://documentation.suse.com/en-us/sle-micro/5.5/single-html/SLE-Micro-deployment/#cha-selfinstal-procedure[]
-====
 
 [[proxy-quickstart.sect.kvm.settings]]
 == Virtual Machine Manager (virt-manager) Settings
@@ -49,12 +56,9 @@ Enter the following settings when creating a new virtual machine using *virt-man
 ====
 This table specifies the minimum requirements.
 These are suitable for a quick test installation, such as a server with one client.
-If you want to use a production environment, review the requirements listed in xref:installation-and-upgrade:hardware-requirements.adoc[].
+If you want to use a production environment and need background information about disk space, see xref:installation-and-upgrade:hardware-requirements.adoc[].
 ====
 
-== Hardware Requirements for the Proxy
-
-This table shows the hardware requirements for deploying {productname} Proxy.
 
 [cols="1,1", options="header"]
 |===
@@ -69,6 +73,8 @@ This table shows the hardware requirements for deploying {productname} Proxy.
 | Network             | Bridge _br0_
 |===
 
+
+// FIXME Do we need the following note here?
 
 [NOTE]
 ====
@@ -114,13 +120,13 @@ image::enter-timezone.png[]
 
 image::root-password.png[]
 
-. Once installation completes login as root.
+. When installation completes log in as root.
 
 . Proceed to the next section.
 
 
 
-== Register {sl-micro} and {productname} {productnumber}
+== Register {sl-micro} and {productname} {productnumber} Proxy
 
 
 .Procedure: Registering {sl-micro} and {productname} {productnumber} Proxy
