--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
@@ -159,6 +159,37 @@ transactional-update
 
 . If updates were applied reboot.
 
+. This step is optional.
+  However, if custom persistent storage is required for your infrastructure, use the [command]``mgr-storage-proxy`` tool.
+** For more information, see [command]``mgr-storage-proxy --help``.
+This tool simplifies creating the container volumes.
+
+** Use the command in the following manner:
++
+
+// CHECKIT
++
+----
+mgr-storage-proxy <storage-disk-device>
+----
++
+For example:
++
+----
+mgr-storage-server /dev/nvme1n1
+----
++
+[NOTE]
+====
+This command will create the persistent storage volumes at [path]``/var/lib/containers/storage/volumes``.
+
+For more information, see
+
+* xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[]
+* xref:administration:troubleshooting/tshoot-container-full-disk.adoc[]
+====
+
+
 
 
 == Create an Activation Key for the Proxy
@@ -192,37 +223,6 @@ On the {productname} server, create an activation key for the Proxy.
 
 
 include::../generate_proxy_config.adoc[]
-
-== Configure Custom Persistent Storage
-This step is optional.
-However, if custom persistent storage is required for your infrastructure, use the [command]``mgr-storage-proxy`` tool.
-
-* For more information, see [command]``mgr-storage-proxy --help``.
-This tool simplifies creating the container storage and Squid cache volumes.
-+
-Use the command in the following manner:
-+
-
-----
-mgr-storage-proxy <storage-disk-device>
-----
-+
-For example:
-+
-----
-mgr-storage-proxy /dev/nvme1n1 /dev/nvme2n1
-----
-+
-
-[NOTE]
-====
-This command will create the persistent storage volumes at [path]``/var/lib/containers/storage/volumes``.
-
-For more information, see
-
-* xref:installation-and-upgrade:container-management/persistent-container-volumes.adoc[]
-* xref:administration:troubleshooting/tshoot-container-full-disk.adoc[]
-====
 
 
 
