--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-deployment-vm-suma.adoc
@@ -138,7 +138,8 @@ transactional-update register -r <REGCODE> -e <your_email>
 transactional-update register -p SUSE-Manager-Server/5.0/x86_64 -r <REGCODE>
 ----
 
-. Reboot
+. Reboot.
+
 . Update the system:
 +
 
