--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
@@ -176,7 +176,7 @@ mgr-storage-proxy <storage-disk-device>
 For example:
 +
 ----
-mgr-storage-server /dev/nvme1n1
+mgr-storage-proxy /dev/nvme1n1
 ----
 +
 [NOTE]
