--- a/modules/retail/pages/retail-upgrade-branchserver.adoc
+++ b/modules/retail/pages/retail-upgrade-branchserver.adoc
@@ -13,6 +13,6 @@ Upgrade the {productname} Server before starting the {productname} {smr} upgrade
 
 
 .Procedure: Upgrading the {productname} {smr} Branch Server
-. For general information about upgrading a proxy client, see xref:installation-and-upgrade:proxy-intro.adoc[].
+. For general information about upgrading a proxy client, see xref:installation-and-upgrade:container-management/updating-proxy-containers.adoc[]
 . After the proxy upgrade is complete, apply the highstate on the {productname} {smr} Branch Server.
   When applying the highstate, the retail functionality will also be updated.
