--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
@@ -181,7 +181,7 @@ mgr-storage-proxy /dev/nvme1n1
 +
 [NOTE]
 ====
-This command will create the persistent storage volumes at [path]``/var/lib/containers/storage/volumes``.
+This command will move the persistent storage volumes at [path]``/var/lib/containers/storage/volumes`` to the specified storage device.
 
 For more information, see
 
