--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
@@ -126,13 +126,13 @@ image::root-password.png[]
 
 
 
-== Register {sl-micro} and {productname} {productnumber} Proxy
+== Register {sle-micro} and {productname} {productnumber} Proxy
 
 
-.Procedure: Registering {sl-micro} and {productname} {productnumber} Proxy
+.Procedure: Registering {sle-micro} and {productname} {productnumber} Proxy
 . Boot the virtual machine.
 . Log in as `root`.
-. Register {sl-micro} with SCC.
+. Register {sle-micro} with SCC.
 +
 
 ----
@@ -198,7 +198,7 @@ On the {productname} server, create an activation key for the Proxy.
 
 .Task: Create an Activation Key
 . Navigate to menu:Systems[Activation Keys], and click btn:[Create key].
-. Create an activation key for the proxy host with {sl-micro} {microversion} as the parent channel.
+. Create an activation key for the proxy host with {sle-micro} {microversion} as the parent channel.
   This key should include all recommended channels and the Proxy as an extension child channel.
 . Proceed to boostrapping the proxy host as a minion.
 
