Added warning about Oracle / Liberty 7 LTSS.

--- a/modules/client-configuration/pages/registration-overview-oracle.adoc
+++ b/modules/client-configuration/pages/registration-overview-oracle.adoc
@@ -6,7 +6,6 @@ The method and details varies depending on the operating system of the client.
 
 Before you start, ensure that the client has the date and time synchronized correctly with the {productname} Server.
 
-You must also have created an activation key.
+You must also have created an activation key. For more information about creating activation keys, see xref:client-configuration:activation-keys.adoc[].
 
-* For more information about creating activation keys, see xref:client-configuration:activation-keys.adoc[].
-* For more information about migrating {oracle} to {sll}, see xref:client-configuration:clients-sleses.adoc#clients-sleses-el-migration[].
+For more information about migrating {oracle} to {sll}, see xref:client-configuration:clients-sleses.adoc#clients-sleses-el-migration[].
