fix note about Storage requirements (per feedback)

--- a/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/proxy-deployment-vm-suma.adoc
@@ -74,15 +74,10 @@ If you want to use a production environment and need background information abou
 |===
 
 
-// FIXME Do we need the following note here?
-
 [NOTE]
 ====
-[path]``/var/lib/containers/storage/volumes/srv-www``
-Minimum 100 GB, Storage requirements should be calculated for the number of ISO distribution images, containers, and bootstrap repositories you will use.
-
-[path]``/var/lib/containers/storage/volumes/var-cache`` (Squid)
-Minimum 100 GB
+[path]``/var/lib/containers/storage/volumes``
+Minimum 100 GB.  Storage requirements should be calculated for the number of ISO distribution images, containers, and bootstrap repositories you will use.
 ====
 
 
