--- a/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
+++ b/modules/installation-and-upgrade/pages/container-deployment/suma/server-migration-suma.adoc
@@ -29,8 +29,11 @@ endif::[]
   As a result, the fully qualified domain name (FQDN) of the new server will remain the same as that of the old server.
 
 * The IP address must remain unchanged to ensure that the clients can contact the server.
-  After the migration, it will be necessary to manually update the DHCP and DNS records to point to the new server.
-
++
+[IMPORTANT]
+====
+After the migration, it will be necessary to manually update the DHCP and DNS records to point to the new server.
+====
 
 
 === GPG Keys
